Stopper ie8/7 for at collapse min-width:768px;

--- a/less/kb/kb.less
+++ b/less/kb/kb.less
@@ -1,6 +1,11 @@
 /*!
  * Det Kongelige bibliotek v0.0.1
  */
+/* IE 8 Hack */
+.EXLCustomLayoutContainer {
+    min-width: 768px\9;
+}
+
 
 // Search tiles
 @import "searchLimitsTile.less";
@@ -10,4 +15,5 @@
 
 //
 @import "facetTile.less";
+
 @import "resultsTile.less";
